# descifrari-C

./: .gitignore  Readme.md
Algoritmi/liste_simplu_inlantuite/: Makefile  list_functions.c  list_functions.h  main.c
Algoritmi/sortare/: CMakeLists.txt  README.md  algoritmi_sortare.c
Algoritmi/sortare/include/: algoritmi_sortare.h  data-swap.c
Algoritmi/sortare/include/algoritmi_sortare/: bubble-sort.c  bucket-sort.c  cocktail-sort.c  counting-sort.c  heap-sort.c  insertion-sort.c  merge-sort.c  quick-sort.c  radix-sort.c  selection-sort.c  shell-sort.c
Concepts/: asyncio.md
Concepts/daemonize/: .gitignore  Makefile  Readme.md  daemon_example.c
Concepts/datetime/: .gitignore  Makefile  Readme.md  exemplul1.c  exemplul2.c  exemplul3.c
Concepts/makefiles/: Readme.md
Concepts/ncurses/: .gitignore  Makefile  Readme.md  clock  clock.c  clock.c.md  exemplul1  exemplul1.c  exemplul2  exemplul2.c  exemplul3  exemplul3.c  exemplul4.c  hei  hei.c
Concepts/sockets/: .gitignore  Makefile  socket_client.c  socket_server.c  sockets.md
Concepts/syslog/: Readme.md  syslog.c
Exercitii/exercitiul_1/: ex1.c  readme.md
crc-cmake-make/: CMakeLists.txt  Makefile.dinamic  Makefile.static  README.md
lobby/: Readme.md
simple-chat-make/: Makefile  client.c  server.c
simple-webserver-make/: .gitignore  Readme.md  Readme_orig.md  server-c.md
simple-webserver-make/content/: index.html
src/2048-in-terminal-make/: README.md
src/crc-cmake-make/: README.md  crc.c
src/donut/: Readme.md
src/donut/donut-v1/: Readme.md
src/donut/donut-v2/: Readme.md
src/donut/donut-v3/: Readme.md  donut-v3-original.c
src/file-transfer-tcp-socket-make/: README.md
src/simple-chat-make/: README.md  client.c  client.md  server.c  server.md
src/simple-webserver-make/: Readme.md  server-c.md
src/sortari-cmake/: README.md
src/sortari-cmake/sortari-onedir-cmake/: CMakeLists.txt  sort-algos-int.c
src/sortari-cmake/sortari-onedir-cmake/include/: data-swap.c  sorted-assert.c  sorting_algs.h  time-utils.c
src/sortari-cmake/sortari-onedir-cmake/include/sort-algos-int/: bubble-sort-int.c  cocktail-sort-int.c  insertion-sort-int.c  quick-sort-int.c  selection-sort-int.c  sort-test.c
src/sortari-cmake/sortari-onefile-cmake/: CMakeLists.txt  README.md  sort-algos-int.c  sort-algos-int.c.md
src/tetris-make/: Makefile  README.md
src/tetris-make/src/: game.c  score.c  score.c.md  screen.c  screen.c.md
src/tictactoe-make/: .gitignore  Makefile.dinamic  Readme.md
src/todo-make/: Readme.markdown
src/todo-make/src/: generator.h
tictactoe-make/: Makefile  main.c
(+16 files in other folders)
